--- a/material-pro-angular-lite/src/app/material-component/order/order.component.html
+++ b/material-pro-angular-lite/src/app/material-component/order/order.component.html
@@ -14,7 +14,7 @@
                [dataSource]="dataSource" multiTemplateDataRows
                class="mat-elevation">
           <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
-            <th mat-header-cell *matHeaderCellDef>{{column='#'}}</th>
+            <th mat-header-cell *matHeaderCellDef>{{column}}</th>
             <td mat-cell *matCellDef="let element"> {{element[column]}}</td>
           </ng-container>
 
