--- a/greenpost/src/app/components/workspaces/my-orders/section/section.component.html
+++ b/greenpost/src/app/components/workspaces/my-orders/section/section.component.html
@@ -41,4 +41,4 @@
 </mat-card>
 
 <button mat-fab color="warn" class="floating-button"><mat-icon>add</mat-icon></button>
-<button mat-fab color="primary" class="floating-button2"><mat-icon>cloud_upload</mat-icon></button>
+<button mat-fab color="primary" class="floating-button" [style.bottom]="'110px'"><mat-icon>cloud_upload</mat-icon></button>
