added map, fixed styles

--- a/greenpost/src/app/components/workspaces/my-profile/my-profile.component.html
+++ b/greenpost/src/app/components/workspaces/my-profile/my-profile.component.html
@@ -1,1 +1,5 @@
-<mat-card>Профиль</mat-card>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>My profile page</mat-card-title>
+    </mat-card-header>
+</mat-card>
