--- a/greenpost/src/app/components/workspaces/starter/starter.component.html
+++ b/greenpost/src/app/components/workspaces/starter/starter.component.html
@@ -1,1 +1,5 @@
-<mat-card>Главная</mat-card>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Starter page</mat-card-title>
+    </mat-card-header>
+</mat-card>
