--- a/greenpost/src/app/components/layout/sidebar/sidebar.component.html
+++ b/greenpost/src/app/components/layout/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
     <button mat-menu-item>
       <mat-icon>notifications_off</mat-icon> Отключить оповещения
     </button>
-    <button mat-menu-item (click)="signOut()">
+    <button mat-menu-item>
       <mat-icon>exit_to_app</mat-icon> Выйти
     </button>
   </mat-menu>
