--- a/greenpost/src/app/components/workspaces/my-orders/card/card.component.html
+++ b/greenpost/src/app/components/workspaces/my-orders/card/card.component.html
@@ -1,64 +1,73 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title class="order-info-transaction">Заказ №1</mat-card-title>
-    </mat-card-header>
-    <span>
-        <mat-card fxFlex="2 2 auto">
-            <mat-card-content>
-                <mat-card-subtitle>Номер заказа:</mat-card-subtitle>
-                <mat-card-subtitle>1</mat-card-subtitle>
-            </mat-card-content>
-        </mat-card>
-        <mat-card fxFlex="2 2 auto">
-            <mat-card-content>
-                <mat-card-subtitle>Откуда:</mat-card-subtitle>
-                <mat-card-subtitle>ул. Маяковского 18</mat-card-subtitle>
-            </mat-card-content>
-        </mat-card>
-        <mat-card fxFlex="2 2 auto">
-            <mat-card-content>
-                <mat-card-subtitle>Куда:</mat-card-subtitle>
-                <mat-card-subtitle>ул. Лаврухина 7</mat-card-subtitle>
-            </mat-card-content>
-        </mat-card>
-        <mat-card fxFlex="2 2 auto">
-            <mat-card-content>
-                <mat-card-subtitle>Получатель:</mat-card-subtitle>
-                <mat-card-subtitle>Игорь Ласточкин</mat-card-subtitle>
-            </mat-card-content>
-        </mat-card>
-        <mat-card fxFlex="2 2 auto" class="order-info-transaction2">
-            <mat-card-content>
-                <mat-card-subtitle>Статус:</mat-card-subtitle>
-                <mat-card-subtitle>Проверка</mat-card-subtitle>
-            </mat-card-content>
-        </mat-card>
-    </span>
-</mat-card>
-
-<mat-card>
-    <mat-card-header>
-        <mat-card-title>Состояние доставки</mat-card-title>
+        <mat-card-title class="order-info-transaction">Order no.1</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <table mat-table [dataSource]="dataSource">
+        <div fxLayout="row">
+            <div fxFlex="1 1 auto">
+                <div class="client-info-block">
+                    <span class="client-info-caption">Reciever</span>
+                    <br />
+                    <span>Igor Ivanov</span>
+                </div>
+                <div class="client-info-block">
+                    <span class="client-info-caption">Status</span>
+                    <br />
+                    <span>Active</span>
+                </div>
+            </div>
+            <span fxFlex></span>
+            <div fxFlex="1 1 auto">
+                <div class="client-info-block">
+                    <span class="client-info-caption">From</span>
+                    <br />
+                    <span>Mayakovskoho 18</span>
+                </div>
+                <div class="client-info-block">
+                    <span class="client-info-caption">To</span>
+                    <br />
+                    <span>Lavrukhina 7</span>
+                </div>
+            </div>
+        </div>
+    </mat-card-content>
+</mat-card>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Map</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <gmap></gmap>
+    </mat-card-content>
+</mat-card>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Delivery status</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <table mat-table [dataSource]="dataSource" fxFlex>
             <ng-container matColumnDef="id">
                 <mat-header-cell *matHeaderCellDef>#</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.id}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="from">
-                <mat-header-cell *matHeaderCellDef>Откуда</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>From</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.from}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="to">
-                <mat-header-cell *matHeaderCellDef>Куда</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>To</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.to}}</mat-cell>
             </ng-container>
 
-            <mat-header-row *matHeaderRowDef="['id','from','to']"></mat-header-row>
-            <mat-row *matRowDef="let element; columns: ['id','from','to'];"></mat-row>
+            <ng-container matColumnDef="status">
+                <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.status}}</mat-cell>
+            </ng-container>
+
+            <mat-header-row *matHeaderRowDef="['id','from','to','status']"></mat-header-row>
+            <mat-row *matRowDef="let element; columns: ['id','from','to','status'];"></mat-row>
         </table>
     </mat-card-content>
 </mat-card>
