--- a/greenpost/src/app/components/workspaces/my-orders/main/main.component.html
+++ b/greenpost/src/app/components/workspaces/my-orders/main/main.component.html
@@ -2,10 +2,10 @@
     <a mat-tab-link
        routerLinkActive #section="routerLinkActive"
        [active]="section.isActive"
-       routerLink="/my-orders/section">Все заказы</a>
+       routerLink="/my-orders/section">All orders</a>
     <a mat-tab-link
        routerLinkActive #card="routerLinkActive"
        [active]="card.isActive"
-       routerLink="/my-orders/card">Детали</a>
+       routerLink="/my-orders/card">Details</a>
 </nav>
 <router-outlet></router-outlet>
