--- a/greenpost/src/app/components/workspaces/my-orders/section/section.component.html
+++ b/greenpost/src/app/components/workspaces/my-orders/section/section.component.html
@@ -1,44 +1,44 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title>Фильтр заказов</mat-card-title>
+        <mat-card-title>Filters</mat-card-title>
     </mat-card-header>
 </mat-card>
 <mat-card>
     <mat-card-header>
-        <mat-card-title>Все заказы</mat-card-title>
+        <mat-card-title>My orders</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <table mat-table [dataSource]="dataSource" multiTemplateDataRows>
+        <table mat-table [dataSource]="dataSource" multiTemplateDataRows fxFlex>
             <ng-container matColumnDef="id">
                 <mat-header-cell *matHeaderCellDef>#</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.id}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="reciever">
-                <mat-header-cell *matHeaderCellDef>Получатель</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>Reciever</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.reciever}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="from">
-                <mat-header-cell *matHeaderCellDef>Откуда</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>From</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.from}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="to">
-                <mat-header-cell *matHeaderCellDef>Куда</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>To</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.to}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="status">
-                <mat-header-cell *matHeaderCellDef>Статус</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.status}}</mat-cell>
             </ng-container>
 
             <mat-header-row *matHeaderRowDef="['id','from','to','reciever','status']"></mat-header-row>
-            <mat-row *matRowDef="let element; columns: ['id','from','to','reciever','status'];"></mat-row>
+            <mat-row class="clickable-row" *matRowDef="let element; columns: ['id','from','to','reciever','status'];" (click)="openCard(element.id)"></mat-row>
         </table>
     </mat-card-content>
 </mat-card>
 
-<button mat-fab color="warn" class="floating-button"><mat-icon>add</mat-icon></button>
-<button mat-fab color="primary" class="floating-button" [style.bottom]="'110px'"><mat-icon>cloud_upload</mat-icon></button>
+<button mat-fab color="warn" class="floating-button" matTooltip="Create new order" matTooltipPosition="left"><mat-icon>add</mat-icon></button>
+<button mat-fab color="primary" class="floating-button" matTooltip="Load from file" matTooltipPosition="left" [style.bottom]="'110px'" (click)="openBottomSheet()"><mat-icon>cloud_upload</mat-icon></button>
