logistics order section added

--- a/greenpost/src/app/components/layout/sidebar/sidebar.component.html
+++ b/greenpost/src/app/components/layout/sidebar/sidebar.component.html
@@ -47,4 +47,14 @@
       <span fxFlex></span>
     </a>
   </mat-list-item>
+  <mat-list-item [class.selected]="logisticsorders.isActive">
+    <a routerLink="/logistics-orders"
+       routerLinkActive
+       [class.selected]="logisticsorders.isActive"
+       #logisticsorders="routerLinkActive">
+      <mat-icon>business</mat-icon>
+      <span>Доставки</span>
+      <span fxFlex></span>
+    </a>
+  </mat-list-item>
 </mat-nav-list>
