--- a/greenpost/src/app/components/workspaces/logistics-transactions/section/section.component.html
+++ b/greenpost/src/app/components/workspaces/logistics-transactions/section/section.component.html
@@ -25,7 +25,76 @@
         <mat-card-title>My orders</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <table mat-table [dataSource]="dataSource" multiTemplateDataRows fxFlex>
+        <table mat-table [dataSource]="dataSource">
+
+            <!-- Checkbox Column -->
+            <ng-container matColumnDef="select">
+                <th mat-header-cell *matHeaderCellDef>
+                    <mat-checkbox (change)="$event ? masterToggle() : null"
+                                  [checked]="selection.hasValue() && isAllSelected()"
+                                  [indeterminate]="selection.hasValue() && !isAllSelected()">
+                    </mat-checkbox>
+                </th>
+                <td mat-cell *matCellDef="let row">
+                    <mat-checkbox (click)="$event.stopPropagation()"
+                                  (change)="$event ? selection.toggle(row) : null"
+                                  [checked]="selection.isSelected(row)">
+                    </mat-checkbox>
+                </td>
+            </ng-container>
+
+            <!-- id Column -->
+            <ng-container matColumnDef="id">
+                <mat-header-cell *matHeaderCellDef>id </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
+            </ng-container>
+
+            <!-- from Column -->
+            <ng-container matColumnDef="from">
+                <mat-header-cell *matHeaderCellDef> from </mat-header-cell>
+                <mat-cell mat-cell *matCellDef="let element"> {{element.from}} </mat-cell>
+            </ng-container>
+
+            <!-- to Column -->
+            <ng-container matColumnDef="to">
+                <mat-header-cell *matHeaderCellDef> to </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.to}} </mat-cell>
+            </ng-container>
+
+            <!-- reciever Column -->
+            <ng-container matColumnDef="reciever">
+                <mat-header-cell *matHeaderCellDef> reciever </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.reciever}} </mat-cell>
+            </ng-container>
+            <!-- status Column -->
+            <ng-container matColumnDef="status">
+                <mat-header-cell *matHeaderCellDef> status </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.status}} </mat-cell>
+            </ng-container>
+
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"
+                (click)="selection.toggle(row)">
+            </mat-row>
+        </table>
+
+        <!--<table mat-table [dataSource]="dataSource" multiTemplateDataRows fxFlex>
+            &lt;!&ndash; Checkbox Column &ndash;&gt;
+            <ng-container matColumnDef="select">
+                <mat-header-cell *matHeaderCellDef>RR</mat-header-cell>
+                    <mat-checkbox (change)="$event ? masterToggle() : null"
+                                  [checked]="selection.hasValue() && isAllSelected()"
+                                  [indeterminate]="selection.hasValue() && !isAllSelected()">
+                    </mat-checkbox>
+
+                <mat-cell *matCellDef="let row"></mat-cell>
+                    <mat-checkbox (click)="$event.stopPropagation()"
+                                  (change)="$event ? selection.toggle(row) : null"
+                                  [checked]="selection.isSelected(row)">
+                    </mat-checkbox>
+
+            </ng-container>
+
             <ng-container matColumnDef="id">
                 <mat-header-cell *matHeaderCellDef>#</mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.id}}</mat-cell>
@@ -53,7 +122,8 @@
 
             <mat-header-row *matHeaderRowDef="['id','from','to','reciever','status']"></mat-header-row>
             <mat-row class="clickable-row" *matRowDef="let element; columns: ['id','from','to','reciever','status'];" (click)="openCard(element.id)"></mat-row>
-        </table>
+        </table>-->
+
     </mat-card-content>
 </mat-card>
 
