--- a/greenpost/src/app/components/layout/sidebar/sidebar.component.html
+++ b/greenpost/src/app/components/layout/sidebar/sidebar.component.html
@@ -1,61 +1,70 @@
-<mat-card>
-    <mat-card-header>
-        <mat-card-title>Filters</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-        <form class="example-form">
-            <mat-form-field class="example" fxFlex="1 1 auto">
-                <input matInput placeholder="Courier" value="Vasya">
-            </mat-form-field>
-            <mat-form-field class="example" fxFlex="1 1 auto">
-                <input matInput placeholder="№ of Order" value="A123">
-            </mat-form-field>
-            <mat-form-field class="example" fxFlex="1 1 auto">
-                <input matInput placeholder="Client" value="Нова Пошта">
-            </mat-form-field>
-            <mat-form-field class="example" fxFlex="1 1 auto">
-                <input matInput placeholder="Status" value="Done">
-            </mat-form-field>
-        </form>
-        <button mat-raised-button color="primary">Filter</button>
-    </mat-card-content>
-</mat-card>
-<mat-card>
-    <mat-card-header>
-        <mat-card-title>My orders</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-        <table mat-table [dataSource]="dataSource" multiTemplateDataRows fxFlex>
-            <ng-container matColumnDef="id">
-                <mat-header-cell *matHeaderCellDef>#</mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.id}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="reciever">
-                <mat-header-cell *matHeaderCellDef>Reciever</mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.reciever}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="from">
-                <mat-header-cell *matHeaderCellDef>From</mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.from}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="to">
-                <mat-header-cell *matHeaderCellDef>To</mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.to}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="status">
-                <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.status}}</mat-cell>
-            </ng-container>
-
-            <mat-header-row *matHeaderRowDef="['id','from','to','reciever','status']"></mat-header-row>
-            <mat-row class="clickable-row" *matRowDef="let element; columns: ['id','from','to','reciever','status'];" (click)="openCard(element.id)"></mat-row>
-        </table>
-    </mat-card-content>
-</mat-card>
-
-<button mat-fab color="warn" class="floating-button" matTooltip="Create new order" matTooltipPosition="left"><mat-icon>add</mat-icon></button>
-<button mat-fab color="primary" class="floating-button" matTooltip="Load from file" matTooltipPosition="left" [style.bottom]="'110px'" (click)="openBottomSheet()"><mat-icon>cloud_upload</mat-icon></button>
+<div class="user-profile" style="background: url(assets/images/background/user-info.jpg) no-repeat;">
+    <div class="profile-img"><img src="assets/images/users/1.jpg" alt="user"></div>
+    <div class="profile-text"><a [matMenuTriggerFor]="sdprofile" class=""> Кощеев Сергей <i class="ti-angle-down font-12 m-l-5"></i></a></div>
+    <mat-menu #sdprofile="matMenu" class="mymegamenu">
+        <button mat-menu-item>
+            <mat-icon>settings</mat-icon> Настройки
+        </button>
+        <button mat-menu-item>
+            <mat-icon>account_box</mat-icon> Профиль
+        </button>
+        <button mat-menu-item>
+            <mat-icon>notifications_off</mat-icon> Отключить оповещения
+        </button>
+        <button mat-menu-item>
+            <mat-icon>exit_to_app</mat-icon> Выйти
+        </button>
+    </mat-menu>
+</div>
+<mat-nav-list>
+    <mat-list-item [class.selected]="starter.isActive">
+        <a routerLink="/starter"
+           routerLinkActive
+           [class.selected]="starter.isActive"
+           #starter="routerLinkActive">
+            <mat-icon>dashboard</mat-icon>
+            <span>Главная</span>
+            <span fxFlex></span>
+        </a>
+    </mat-list-item>
+    <mat-list-item [class.selected]="myprofile.isActive">
+        <a routerLink="/my-profile"
+           routerLinkActive
+           [class.selected]="myprofile.isActive"
+           #myprofile="routerLinkActive">
+            <mat-icon>date_range</mat-icon>
+            <span>Профиль</span>
+            <span fxFlex></span>
+        </a>
+    </mat-list-item>
+    <mat-list-item [class.selected]="myorders.isActive">
+        <a routerLink="/my-orders"
+           routerLinkActive
+           [class.selected]="myorders.isActive"
+           #myorders="routerLinkActive">
+            <mat-icon>business</mat-icon>
+            <span>Заказы</span>
+            <span fxFlex></span>
+        </a>
+    </mat-list-item>
+    <mat-list-item [class.selected]="logisticsorders.isActive">
+        <a routerLink="/logistics-orders"
+           routerLinkActive
+           [class.selected]="logisticsorders.isActive"
+           #logisticsorders="routerLinkActive">
+            <mat-icon>business</mat-icon>
+            <span>Доставки</span>
+            <span fxFlex></span>
+        </a>
+    </mat-list-item>
+    <mat-list-item [class.selected]="logisticstransactions.isActive">
+        <a routerLink="/logistics-transactions"
+           routerLinkActive
+           [class.selected]="logisticstransactions.isActive"
+           #logisticstransactions="routerLinkActive">
+            <mat-icon>business</mat-icon>
+            <span>Перевозки</span>
+            <span fxFlex></span>
+        </a>
+    </mat-list-item>
+</mat-nav-list>
