--- a/greenpost/src/app/components/workspaces/logistics-orders/main/main.component.html
+++ b/greenpost/src/app/components/workspaces/logistics-orders/main/main.component.html
@@ -2,10 +2,16 @@
     <a mat-tab-link
        routerLinkActive #section="routerLinkActive"
        [active]="section.isActive"
-       routerLink="/my-orders/section">All orders</a>
+       routerLink="/logistics-orders/section">All orders</a>
+    <button mat-icon-button color="primary">
+        <mat-icon>arrow_left</mat-icon>
+    </button>
     <a mat-tab-link
        routerLinkActive #card="routerLinkActive"
        [active]="card.isActive"
-       routerLink="/my-orders/card">Details</a>
+       routerLink="/logistics-orders/card">Details</a>
+    <button mat-icon-button color="primary">
+        <mat-icon>arrow_right</mat-icon>
+    </button>
 </nav>
 <router-outlet></router-outlet>
