--- a/greenpost/src/app/components/workspaces/my-orders/main/main.component.html
+++ b/greenpost/src/app/components/workspaces/my-orders/main/main.component.html
@@ -3,9 +3,15 @@
        routerLinkActive #section="routerLinkActive"
        [active]="section.isActive"
        routerLink="/my-orders/section">All orders</a>
+    <button mat-icon-button color="primary">
+        <mat-icon>arrow_left</mat-icon>
+    </button>
     <a mat-tab-link
        routerLinkActive #card="routerLinkActive"
        [active]="card.isActive"
        routerLink="/my-orders/card">Details</a>
+    <button mat-icon-button color="primary">
+        <mat-icon>arrow_right</mat-icon>
+    </button>
 </nav>
 <router-outlet></router-outlet>
