--- a/greenpost/src/app/components/workspaces/logistics-courier/section/section.component.html
+++ b/greenpost/src/app/components/workspaces/logistics-courier/section/section.component.html
@@ -70,9 +70,9 @@
                 <mat-cell *matCellDef="let element"> {{element.price}} </mat-cell>
             </ng-container>
             <!-- type of Order Column -->
-            <ng-container matColumnDef="typeOfOrder">
+            <ng-container matColumnDef="type">
                 <mat-header-cell *matHeaderCellDef> Тип доставки </mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.typeOfOrder}} </mat-cell>
+                <mat-cell *matCellDef="let element"> {{element.type}} </mat-cell>
             </ng-container>
 
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
