fixed orderModel + simplified starter

--- a/greenpost/src/app/components/workspaces/my-orders/card/card.component.html
+++ b/greenpost/src/app/components/workspaces/my-orders/card/card.component.html
@@ -84,3 +84,4 @@
         </table>
     </mat-card-content>
 </mat-card>
+<button mat-fab color="accent" class="floating-button" matTooltip="Копировать заказ" matTooltipPosition="left"><mat-icon>library_add</mat-icon></button>
