--- a/greenpost/src/app/components/workspaces/my-orders/section/section.component.html
+++ b/greenpost/src/app/components/workspaces/my-orders/section/section.component.html
@@ -78,6 +78,5 @@
     </mat-card-content>
 </mat-card>
 
-<button mat-fab color="warn" class="floating-button" matTooltip="Create new order" matTooltipPosition="left"><mat-icon>add</mat-icon></button>
-<button mat-fab color="primary" class="floating-button" matTooltip="Load from file" matTooltipPosition="left" [style.bottom]="'110px'" (click)="openBottomSheet()"><mat-icon>cloud_upload</mat-icon></button>
-<button mat-fab color="primary" class="floating-button" matTooltip="Копировать заказ" matTooltipPosition="left" [style.bottom]="'175px'"><mat-icon>library_add</mat-icon></button>
+<button mat-fab color="warn" class="floating-button" matTooltip="Создать новый заказ" matTooltipPosition="left"><mat-icon>add</mat-icon></button>
+<button mat-fab color="primary" class="floating-button" matTooltip="Загрузить из файла" matTooltipPosition="left" [style.bottom]="'110px'" (click)="openBottomSheet()"><mat-icon>cloud_upload</mat-icon></button>
