--- a/greenpost/src/app/components/workspaces/logistics-orders/section/section.component.html
+++ b/greenpost/src/app/components/workspaces/logistics-orders/section/section.component.html
@@ -67,13 +67,13 @@
                 <mat-cell *matCellDef="let element"> {{element.price}} </mat-cell>
             </ng-container>
 
-            <ng-container matColumnDef="typeOfOrder">
+            <ng-container matColumnDef="type">
                 <mat-header-cell *matHeaderCellDef> Тип доставки </mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.typeOfOrder}} </mat-cell>
+                <mat-cell *matCellDef="let element"> {{element.type}} </mat-cell>
             </ng-container>
 
-            <mat-header-row *matHeaderRowDef="['id','from','to','reciever','status', 'price', 'typeOfOrder']"></mat-header-row>
-            <mat-row class="clickable-row" *matRowDef="let element; columns: ['id','from','to','reciever','status', 'price', 'typeOfOrder'];"
+            <mat-header-row *matHeaderRowDef="['id','from','to','reciever','status', 'price', 'type']"></mat-header-row>
+            <mat-row class="clickable-row" *matRowDef="let element; columns: ['id','from','to','reciever','status', 'price', 'type'];"
                      (click)="openCard(element.id)"></mat-row>
         </table>
     </mat-card-content>
