--- a/greenpost/src/app/components/workspaces/starter/starter.component.html
+++ b/greenpost/src/app/components/workspaces/starter/starter.component.html
@@ -3,78 +3,54 @@
         <mat-card-title>Инфо про компанию(едрпоу, название, адрес, контакты и т.д.)</mat-card-title>
     </mat-card-header>
 </mat-card>
-<mat-grid-list cols="4">
-    <mat-grid-tile>
-                <div fxLayout="row">
-                    <div fxFlex="1 1 auto">
-                        <mat-card>
-                            <mat-card-header>
-                                <mat-card-title>
-                                    <mat-icon class="icon-done">done</mat-icon>
-                                    <br/>Заказов доставлено
-                                    <br/>6806
-                                </mat-card-title>
-                            </mat-card-header>
-                            <mat-card-content>
+<div fxLayout="row">
+    <mat-card fxFlex="1 1 auto">
+        <mat-card-header>
+            <mat-card-title>
+                <mat-icon class="icon-done">done</mat-icon>
+                <br />Заказов доставлено
+                <br />6806
+            </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
 
-                            </mat-card-content>
-                        </mat-card>
-                    </div>
-                </div>
-    </mat-grid-tile>
-    <mat-grid-tile>
-                <div fxLayout="row">
-                    <div fxFlex="1 1 auto">
-                        <mat-card>
-                            <mat-card-header>
-                                <mat-card-title>
-                                    <mat-icon class="icon-done">directions_run</mat-icon>
-                                    <br/>Курьеров в компании
-                                    <br/>68
-                                </mat-card-title>
-                            </mat-card-header>
-                            <mat-card-content>
+        </mat-card-content>
+    </mat-card>
+    <mat-card fxFlex="1 1 auto">
+        <mat-card-header>
+            <mat-card-title>
+                <mat-icon class="icon-done">directions_run</mat-icon>
+                <br />Курьеров в компании
+                <br />68
+            </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
 
-                            </mat-card-content>
-                        </mat-card>
-                    </div>
-                </div>
-    </mat-grid-tile>
-    <mat-grid-tile>
-                <div fxLayout="row">
-                    <div fxFlex="1 1 auto">
-                        <mat-card>
-                            <mat-card-header>
-                                <mat-card-title>
-                                    <mat-icon class="icon-done">filter_9_plus</mat-icon>
-                                    <br/>Больше 9 лет на рынке
-                                </mat-card-title>
-                            </mat-card-header>
-                            <mat-card-content>
+        </mat-card-content>
+    </mat-card>
+    <mat-card fxFlex="1 1 auto">
+        <mat-card-header>
+            <mat-card-title>
+                <mat-icon class="icon-done">filter_9_plus</mat-icon>
+                <br />Больше 9 лет на рынке
+            </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
 
-                            </mat-card-content>
-                        </mat-card>
-                    </div>
-                </div>
-    </mat-grid-tile>
-    <mat-grid-tile>
-                <div fxLayout="row">
-                    <div fxFlex="1 1 auto">
-                        <mat-card>
-                            <mat-card-header>
-                                <mat-card-title>
-                                    <mat-icon class="icon-done">access_time</mat-icon>
-                                    <br/>Режим работы с 10:00 до 20:00
-                                </mat-card-title>
-                            </mat-card-header>
-                            <mat-card-content>
+        </mat-card-content>
+    </mat-card>
+    <mat-card fxFlex="1 1 auto">
+        <mat-card-header>
+            <mat-card-title>
+                <mat-icon class="icon-done">access_time</mat-icon>
+                <br />Режим работы с 10:00 до 20:00
+            </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
 
-                            </mat-card-content>
-                        </mat-card>
-                    </div>
-                </div>
-    </mat-grid-tile>
-</mat-grid-list>
+        </mat-card-content>
+    </mat-card>
+</div>
 <mat-card>
     <mat-card-header>
         <mat-card-title>Новости, новинки, акции</mat-card-title>
